--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -101,28 +101,8 @@ i {
     flex-wrap: wrap;
 }
 
-.submit-f {
-    text-align: center;
-    flex: 1 1 200px;
-    color: #fff;
-    background-color: #3b5998;
-    border: 2px solid #fff;
-    padding: 10px 10px;
-    border-radius: 60px;
-    font-weight: 700;
-    display: block;
-}
-
-.submit-g {
-    flex: 1 1 200px;
-    text-align: center;
-    color: #0b0b31;
-    display: block;
-    background-color: #eae3e3;
-    border: 2px solid #fff;
-    padding: 10px 10px;
-    border-radius: 60px;
-    font-weight: 700;
+.loginlink {
+    text-align: right;
 }
 
 hr {
