--- a/resources/sass/components/_style.scss
+++ b/resources/sass/components/_style.scss
@@ -1,5 +1,5 @@
 @import '../assets/variables';
-
+@import '../assets/utils/image-circle';
 /* Customizar barra de rolagem */
 
 ::-webkit-scrollbar {
@@ -158,22 +158,6 @@ hr {
     }
 }
 
-.image-circle {
-    background-color: white;
-    border: 4px solid rgb(247, 248, 248);
-    height: 150px;
-    overflow: hidden;
-    width: 150px;
-    border-radius: 50%;
-    margin: 0 auto;
-}
-
-.image-circle img {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    opacity: 0.9;
-}
 
 .categoria {
     padding: 20px;
