--- a/resources/sass/pages/base.scss
+++ b/resources/sass/pages/base.scss
@@ -3,3 +3,8 @@
 @import '../components/navbar';
 @import '../components/reset';
 @import '../components/style';
+
+.container
+{
+    padding: 0px calc($side-spaces/2);
+}
