Perfil dos usuarios

--- a/resources/sass/pages/perfilusuarios.scss
+++ b/resources/sass/pages/perfilusuarios.scss
@@ -6,6 +6,7 @@
 @import "../components/modal";
 @import '../components/forms/form';
 @import "../components/btn";
+@import"../pages/home.scss";
 .perfiluser {
     background-color: $background-color;
     padding: 20px 50px 0px 50px;
