--- a/resources/sass/pages/grupos_perfil.scss
+++ b/resources/sass/pages/grupos_perfil.scss
@@ -5,6 +5,7 @@
 @import '../components/style';
 @import '../layouts/l-content-aside';
 @import "../components/modal";
+@import '../components/form';
 @import '../components/forms/form';
 @import "../components/btn";
 .btn {
@@ -45,6 +46,10 @@
     margin-bottom: 20px;
 }
 
+.pesquisar-grupos .input-field {
+    display: flex;
+}
+
 .image-circle-grupo {
     background-color: white;
     border: 4px solid rgb(247, 248, 248);
@@ -60,7 +65,7 @@
     height: 30px;
     border-radius: 50%;
     border: 1px solid $border-color;
-    margin-right: -8px;
+    margin-right: 10px;
     background-color: white;
 }
 
@@ -219,4 +224,48 @@
     border-radius: 4px;
     border: 1px solid $border-color;
     padding: 15px;
+}
+
+.cabecalhoperfil h1 {
+    text-align: center;
+}
+
+.nomegrupo {
+    display: flex;
+    width: 100%;
+}
+
+//Modal Convidar usuario para grupo 
+.sugestaoparticipante {
+    display: flex;
+    width: 100%;
+}
+
+.sugestaoparticipante input {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: block;
+}
+
+.sugestaoparticipante h4 {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.modalconvidar {
+    max-width: 800px;
+}
+
+.fotosugestao {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid $border-color;
+}
+
+.amigosselecionados {
+    background-color: $background-color;
 }
