--- a/resources/sass/pages/perfilamigos.scss
+++ b/resources/sass/pages/perfilamigos.scss
@@ -11,6 +11,10 @@ body {
     background-color: $background-color;
 }
 
+.mainperfil {
+    border-top: 6px solid #2C3E50;
+}
+
 .perfilcompleto {
     align-items: center;
     justify-content: center;
