--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -1,151 +1,168 @@
-@import '../assets/variables';
-.input-field {
-    position: relative;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-top: 3em;
-}
-
-.input-field input {
-    width: 100%;
-    padding: 4px 4px 4px 35px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #d1d1d1;
-    font-size: 1.2em;
-    color: #414141;
-    outline-color: lightskyblue;
-}
-
-.form-group select {
-    padding-left: 35px;
-    border: 1px solid rgb(223, 223, 223);
-    color: #3a3a3a;
-    font-family: 'Nunito', sans-serif;
-}
-
-.form-group select:focus {
-    border: 1px solid rgb(223, 223, 223);
-    box-shadow: none;
-    color: #0b0b31;
-    font-weight: bold;
-    border-bottom: 2px solid rgb(177, 177, 177);
-}
-
-.form-group select:active {
-    border-bottom: 2px solid rgb(177, 177, 177);
-}
-
-textarea {
-    border: 2px solid #3a3a3a;
-    line-height: 20px;
-    padding: 10px;
-    height: 90px;
-    width: 100%;
-    resize: none;
-    border-radius: 10px;
-}
-
-.input-field label {
-    top: 50%;
-    transform: translateY(-50%);
-    left: 40px;
-    position: absolute;
-    pointer-events: none;
-    font-size: 16px;
-    color: #3a3a3a;
-    font-weight: normal;
-    font-weight: 400;
-    transition: 0.5s;
-}
-
-
-/*Efeito da microinteração*/
-
-.input-field input:focus+label,
-.input-field input:valid+label {
-    top: -1.0em;
-    left: 0px;
-    font-weight: bold;
-    border-radius: 5px;
-}
-
-.bt {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.button-proximo {
-    color: #fff;
-    background-color: #111147;
-    border: 2px solid #fff;
-    padding: 10px 10px;
-    width: 200px;
-    text-align: center;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.submit-f:hover {
-    background-color: #06061d;
-    color: #fff;
-    text-decoration: none;
-}
-
-.submit-g:hover {
-    background-color: #cec6c6;
-    color: black;
-    text-decoration: none;
-}
-
-.submit-entrar {
-    color: #fff;
-    background-color: #09182c;
-    padding: 10px 10px;
-    width: 200px;
-    border-radius: 4px;
-    cursor: pointer;
-    display: block;
-    margin: 0 auto;
-    margin-top: 30px;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-.submit-entrar:hover,
-.button-proximo:hover {
-    background-color: #06061d;
-    color: #fff;
-    text-decoration: none;
-}
-
-@media(min-width: 700px) {
-    .input60 {
-        margin-left: 25px;
-        width: 60%;
+    @import '../assets/variables';
+    .input-field {
+        position: relative;
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 3em;
     }
-    .input50 {
-        margin-left: 25px;
+    
+    .input-field input {
+        width: 100%;
+        padding: 4px 4px 4px 35px;
+        box-sizing: border-box;
+        border-radius: 5px;
+        border: 1px solid #d1d1d1;
+        font-size: 1.2em;
+        color: #414141;
+        outline-color: lightskyblue;
     }
+    
+    .form-control {
+        font-size: 1em;
+        padding: 4px 4px 4px 35px;
+        border-radius: 5px;
+        width: 100%;
+        color: #414141;
+    }
+    
+    .form-groupselect select {
+        border: 1px solid #d1d1d1;
+        width: 100%;
+        padding: 4px 4px 4px 35px;
+        font-size: 1em;
+        padding: 4px 4px 4px 35px;
+        border-radius: 5px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+    
+    .form-groupselect {
+        margin-top: 1.5em;
+    }
+    
+    .form-group select {
+        padding-left: 35px;
+        border: 1px solid rgb(223, 223, 223);
+        color: #3a3a3a;
+        font-family: 'Nunito', sans-serif;
+    }
+    
+    .form-group select:focus {
+        border: 1px solid rgb(223, 223, 223);
+        box-shadow: none;
+        color: #0b0b31;
+        font-weight: bold;
+        border-bottom: 2px solid rgb(177, 177, 177);
+    }
+    
+    .form-group select:active {
+        border-bottom: 2px solid rgb(177, 177, 177);
+    }
+    
     .formajuntar {
         display: inline-flex;
-        width: 100%;
     }
-}
-
-.progress {
-    height: 20px;
-}
-
-.progress-bar {
-    width: 0%;
-}
-
-.custom-switch {
-    align-items: center;
-}
-
-
-/*Personalizando botões Facebook, Google e Entrar*/
+    
+    .formajuntar label {
+        margin-top: -0.8em;
+    }
+    
+    .formajuntar .input-field input:focus+label,
+    .formajuntar .input-field input:valid+label {
+        top: -0.3em;
+    }
+    
+    .cidadeselect,
+    .confirmarsenha {
+        margin-left: 30px;
+    }
+    
+    textarea {
+        border: 2px solid #3a3a3a;
+        line-height: 20px;
+        padding: 10px;
+        height: 90px;
+        width: 100%;
+        resize: none;
+        border-radius: 10px;
+    }
+    
+    .input-field label {
+        top: 50%;
+        transform: translateY(-50%);
+        left: 40px;
+        position: absolute;
+        pointer-events: none;
+        font-size: 16px;
+        color: #3a3a3a;
+        font-weight: normal;
+        font-weight: 400;
+        transition: 0.5s;
+    }
+    /*Efeito da microinteração*/
+    
+    .input-field input:focus+label,
+    .input-field input:valid+label {
+        top: -1.0em;
+        left: 0px;
+        font-weight: bold;
+        border-radius: 5px;
+    }
+    
+    .bt {
+        display: flex;
+        justify-content: flex-end;
+    }
+    
+    .button-proximo {
+        color: #fff;
+        background-color: #111147;
+        border: 2px solid #fff;
+        padding: 10px 10px;
+        width: 200px;
+        text-align: center;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+    
+    .submit-f:hover {
+        background-color: #06061d;
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .submit-g:hover {
+        background-color: #cec6c6;
+        color: black;
+        text-decoration: none;
+    }
+    
+    .submit-entrar {
+        color: #fff;
+        background-color: #09182c;
+        padding: 10px 10px;
+        width: 200px;
+        border-radius: 4px;
+        cursor: pointer;
+        display: block;
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+    
+    a:hover {
+        text-decoration: none;
+    }
+    
+    .submit-entrar:hover,
+    .button-proximo:hover {
+        background-color: #06061d;
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    @media(min-width: 700px) {}
+    
+    .custom-switch {
+        align-items: center;
+    }
+    /*Personalizando botões Facebook, Google e Entrar*/
